--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <name>my_amr</name>
   <version>0.0.0</version>
   <description>An Autonomous Mobile Robot</description>
-  <maintainer email="kennybello.kb@gmail.com@email.com">Kehinde Bello</maintainer>
+  <maintainer email="kennybello.kb@gmail.com@email.com">kehinde bello</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
